# aa-squads

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .stylelintrc.json  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  runtests.py  tox.ini
.github/workflows/: autotester.yml  pypi.yml
squads/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  decorators.py  errors.py  forms.py  hooks.py  managers.py  providers.py  signals.py  tasks.py  urls.py
squads/api/: __init__.py  schema.py
squads/api/groups/: __init__.py  manage.py
squads/migrations/: 0001_initial.py  0002_rename_require_approval_groups_req_approve_and_more.py
squads/models/: __init__.py  filters.py  general.py  groups.py  member.py  memberships.py  skills.py
squads/static/squads/js/: manage_groups.js  sceditor.min.js
squads/templates/squads/: base.html  index.html  menu.html
squads/templates/squads/groups/: browse_groups.html  membership_groups.html  pending_groups.html  view_group.html
squads/templates/squads/manage/: create_group.html  edit_group.html  manage_members.html  manage_pendings.html  manage_squads.html  menu.html
squads/templates/squads/modals/: modal-full.html  modal-xl.html  modal.html  (+1 more)
squads/templatetags/: __init__.py  squads.py
squads/tests/: test_admin.py  test_api.py  test_decarators.py  test_errors.py  test_forms.py  test_groups.py  test_hooks.py  test_managers.py  test_models.py  test_providers.py  test_signals.py  test_tasks.py  test_view_core.py  test_views.py
squads/tests/testdata/: allianceauth.json  esi_stub.py  eveuniverse.json  load_allianceauth.py  load_eveuniverse.py  load_filters.py  load_groups.py  load_memberaudit.py  load_users.py
squads/tests/views/: test_application.py  test_groups.py  test_manage_application.py  test_manage_groups.py  test_manage_memberships.py
squads/view_helpers/: __init__.py  core.py
squads/views/: __init__.py  _core.py  application.py  groups.py  main.py  manage.py
testauth/: celery.py  urls.py
testauth/settings/: base.py  local.py
(+10 files in other folders)
